fix career text align center

--- a/styles/breakpoints/_960up.scss
+++ b/styles/breakpoints/_960up.scss
@@ -40,7 +40,7 @@
 	}
 	&__text {
 		margin-left: 20px;
-
+		text-align: left;
 		& > ul {
 			font-size: 30px;
 			letter-spacing: 2px;
